<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAcercaCabecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/textotitulomanual1"
                    tools:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/textotitulomanual2"
                    tools:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual2" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual21" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual22" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual23" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual24" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual25" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/textotitulomanual3"
                    tools:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textomanual3" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elegantTextHeight="true"
                    android:text="@string/textomanual4"
                    tools:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sendmail" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textomanual5" />
                <TextView
                    android:id="@+id/tvAcercaCuerpoParrafo81"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textomanual6" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>