<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >


        <TextView
            android:id="@+id/textView10"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre_del_centro"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesNombreCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
  >


        <TextView
            android:id="@+id/textView11"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo_de_centro"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesTipoCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
   >


        <TextView
            android:id="@+id/textView16"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NombrePersona"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesNombrePersona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
  >


        <TextView
            android:id="@+id/textView12"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >


        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipoProyecto"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesTipoProyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
     >


        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pais"
            android:textAlignment="viewStart"
            style="@style/Header"/>

        <TextView
            android:id="@+id/tvDetallesPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            style="@style/Header"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
  >

        <CheckBox
            android:id="@+id/compartiremail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compartiremail"
            style="@style/Header"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
  >


        <Button
            android:id="@+id/botonEnviarMailContacto"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/enviarEmail"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/Mensajeescribe"
            android:textAlignment="center"
            style="@style/Header"/>

        <EditText
            android:id="@+id/etMensajeContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:cursorVisible="true"
            android:ems="20"
            android:inputType="textMultiLine"
            android:text=""
            tools:visibility="visible" />
    </LinearLayout>


</LinearLayout>